--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="387dp"
         android:layout_height="178dp"
         android:clickable="false"
-        android:text="Welcome to Minigolf Scoreboard"
+        android:text="@string/welcome_message"
         android:textAlignment="center"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,8 +24,11 @@
         android:id="@+id/newGameButton"
         android:layout_width="250dp"
         android:layout_height="70dp"
-        android:text="New Game"
+        android:background="@drawable/rounded_corners"
+        android:text="@string/new_game"
         android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -37,8 +40,11 @@
         android:id="@+id/loadSGButton"
         android:layout_width="250dp"
         android:layout_height="70dp"
-        android:text="Load Saved Games"
+        android:background="@drawable/rounded_corners"
+        android:text="@string/load_saved_games"
         android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -48,10 +54,13 @@
 
     <Button
         android:id="@+id/helpButton"
-        android:layout_width="200dp"
-        android:layout_height="79dp"
-        android:text="Help"
+        android:layout_width="250dp"
+        android:layout_height="70dp"
+        android:background="@drawable/rounded_corners"
+        android:text="@string/help"
         android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -63,7 +72,7 @@
         android:id="@+id/textView2"
         android:layout_width="349dp"
         android:layout_height="17dp"
-        android:text="Copyright © 2021 theBrilliants’ Inc, All rights reserved. "
+        android:text="@string/copyright"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.066"
