--- a/app/src/main/res/layout/activity_newgame.xml
+++ b/app/src/main/res/layout/activity_newgame.xml
@@ -44,7 +44,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter game title here!" />
+            android:hint="@string/enter_game_title_here" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
@@ -52,7 +52,7 @@
         android:layout_width="362dp"
         android:layout_height="77dp"
         android:clickable="false"
-        android:text="New Games"
+        android:text="@string/new_games"
         android:textAlignment="center"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -64,9 +64,11 @@
 
     <Button
         android:id="@+id/letsPlayButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Let's Play!"
+        android:layout_width="250dp"
+        android:layout_height="70dp"
+        android:background="@drawable/rounded_corners"
+        android:text="@string/play"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
