--- a/app/src/main/res/layout/activity_newgame.xml
+++ b/app/src/main/res/layout/activity_newgame.xml
@@ -67,8 +67,8 @@
         android:layout_width="250dp"
         android:layout_height="70dp"
         android:background="@drawable/rounded_corners"
+        android:text="@string/play"
         android:textSize="24sp"
-        android:text="Let's Play!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
