--- a/app/src/main/res/layout/activity_scoreboard.xml
+++ b/app/src/main/res/layout/activity_scoreboard.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     tools:context=".ScoreboardActivity">
 
     <TextView
@@ -22,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="28sp"
         app:layout_constraintEnd_toStartOf="@+id/spinner2"
         app:layout_constraintHorizontal_bias="0.458"
@@ -34,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="84dp"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="28sp"
         app:layout_constraintEnd_toStartOf="@+id/spinner3"
         app:layout_constraintHorizontal_bias="0.458"
@@ -47,8 +48,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/scoreboard"
+        android:textColor="#0fb861"
         android:fontFamily="@font/proxima_nova_bold"
-        android:textColor="#000000"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -62,7 +63,7 @@
         android:layout_marginTop="52dp"
         android:text="@string/total_score"
         android:fontFamily="@font/proxima_nova_regular"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.954"
@@ -109,7 +110,7 @@
         android:layout_marginTop="52dp"
         android:text="@string/strokes"
         android:fontFamily="@font/proxima_nova_regular"
-        android:textColor="#171515"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/score"
         app:layout_constraintHorizontal_bias="0.779"
@@ -122,6 +123,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="@string/current_hole"
+        android:textColor="#FFFFFF"
         android:fontFamily="@font/proxima_nova_regular"
         android:textSize="25sp"
         app:layout_constraintEnd_toStartOf="@+id/spinner"
@@ -133,7 +135,7 @@
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="124dp"
-        android:text="FULL SCORECARD"
+        android:text="@string/full_scorecard"
         android:fontFamily="@font/proxima_nova_regular"
         android:background="@drawable/rounded_corners"
         android:textSize="30sp"
@@ -150,6 +152,7 @@
         android:layout_marginEnd="12dp"
         android:text="0"
         android:fontFamily="@font/proxima_nova_regular"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.786"
         app:layout_constraintStart_toEndOf="@+id/spinner2"
@@ -163,6 +166,7 @@
         android:layout_marginBottom="132dp"
         android:text="0"
         android:fontFamily="@font/proxima_nova_regular"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.722"
@@ -177,6 +181,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/back"
+        android:textColor="#FFFFFF"
         android:fontFamily="@font/proxima_nova_regular"
         app:layout_constraintEnd_toStartOf="@+id/scoreboard"
         app:layout_constraintHorizontal_bias="0.531"
