--- a/app/src/main/res/layout/row_player.xml
+++ b/app/src/main/res/layout/row_player.xml
@@ -2,9 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/rowBackground"
+    android:layout_margin="4dp"
     android:layout_height="wrap_content">
 
     <TextView
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:gravity="center"
+        android:layout_marginStart="1dp"
+        android:layout_marginBottom="1dp"
+        android:layout_marginTop="1dp"
+        android:background="@color/white"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -12,6 +20,21 @@
         android:id="@+id/playerName"
         android:layout_width="0dp"
         android:layout_height="50dp"/>
+
+        <TextView
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:gravity="center"
+            android:layout_marginEnd="1dp"
+            android:layout_marginBottom="1dp"
+            android:layout_marginTop="1dp"
+            android:background="@color/white"
+            android:id="@+id/playerColorName"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/guideline2"
+            android:layout_width="0dp"
+            android:layout_height="50dp"/>
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
