Created button to finish a game( not functional)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,9 +75,9 @@
         android:id="@+id/textView2"
         android:layout_width="349dp"
         android:layout_height="17dp"
-        android:text="@string/copyright"
         android:fontFamily="@font/proxima_nova_regular"
-        android:textColor="#FFFFFF"
+        android:text="@string/copyright"
+        android:textColor="#0C0E0E"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.066"
